Crash when click-dragging across the visibility icons #96123

Closed
opened 2022-03-02 12:48:54 +01:00 by Steffen Dünner · 10 comments

System Information
Operating system: Linux-5.13.0-30-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-02 11:14, hash: c2e8e68b65
Worked: latest buildbot blender-3.2.0-alpha+master.eabdcdcd44b9-linux.x86_64-release
Caused by aa71414dfc

Short description of error
When click-dragging across the visibility icons (or what they are called) in the Outliner to e.g. change the visibility and the selectability with a single mouse click, Blender instantly crashes / closes.
This must be a rather new problem, might be related to this https://developer.blender.org/T96120

Exact steps for others to reproduce the error

  • Open Blender (very latest master)
  • Go to Outliner and click-drag across the visibility icons of the default cube or the camera:
    image.png
  • Crash
**System Information** Operating system: Linux-5.13.0-30-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-02 11:14, hash: `c2e8e68b65` Worked: latest buildbot blender-3.2.0-alpha+master.eabdcdcd44b9-linux.x86_64-release Caused by aa71414dfc **Short description of error** When click-dragging across the visibility icons (or what they are called) in the Outliner to e.g. change the visibility and the selectability with a single mouse click, Blender instantly crashes / closes. This must be a rather new problem, might be related to this https://developer.blender.org/T96120 **Exact steps for others to reproduce the error** - Open Blender (very latest master) - Go to Outliner and click-drag across the visibility icons of the default cube or the camera: ![image.png](https://archive.blender.org/developer/F12894190/image.png) - Crash

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I can't redo this, tested f74249eaf435dd7e7e71feaf9c996a96e83448e4 and c23ec04b4e30f300a670f1cb1dc882e0608d09ad.

  • Does this happen with factory settings?
  • Does this crash both single-click and dragging? (the report mentions both)
I can't redo this, tested `f74249eaf435dd7e7e71feaf9c996a96e83448e4` and `c23ec04b4e30f300a670f1cb1dc882e0608d09ad`. - Does this happen with factory settings? - Does this crash both single-click and dragging? (the report mentions both)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

@ideasman42 , I can reproduce on present master c23ec04b4e

For reproducing

  • Click on any Icon (and hold the left click)
  • Move your mouse while holding LMB
blender.exe         :0x00007FF7724C2900  wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2994
blender.exe         :0x00007FF7724C1F70  wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3188
blender.exe         :0x00007FF7724BEF70  wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3754
blender.exe         :0x00007FF7724A9880  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:625
blender.exe         :0x00007FF7724A5060  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:549
blender.exe         :0x00007FF773453A84  __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FF946207020  BaseThreadInitThunk
ntdll.dll           :0x00007FF946882630  RtlUserThreadStart```
@ideasman42 , I can reproduce on present master c23ec04b4e30f300a670f1cb1dc882e0608d09ad For reproducing - Click on any Icon (and hold the left click) - Move your mouse while holding LMB ```blender.exe :0x00007FF7724BD8E0 handler_region_v2d_mask_test C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:4187 blender.exe :0x00007FF7724C2900 wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2994 blender.exe :0x00007FF7724C1F70 wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3188 blender.exe :0x00007FF7724BEF70 wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3754 blender.exe :0x00007FF7724A9880 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:625 blender.exe :0x00007FF7724A5060 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:549 blender.exe :0x00007FF773453A84 __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF946207020 BaseThreadInitThunk ntdll.dll :0x00007FF946882630 RtlUserThreadStart```

Yes it happens with factory-startup, too.

It doesn't happen when I single-click each of the icons one after the other. It happens only when I click and hold / drag across several of them. For example, if I click on the selectability icon, hold the mouse button and drag it to the right.

Yes it happens with factory-startup, too. It doesn't happen when I single-click each of the icons one after the other. It happens only when I click and hold / drag across several of them. For example, if I click on the selectability icon, hold the mouse button and drag it to the right.
Member

Bisecting points to aa71414dfc
@ideasman42 ^

Bisecting points to aa71414dfc @ideasman42 ^

This issue was referenced by 47396ea81e

This issue was referenced by 47396ea81edba585cc69c5760703cde727bc08a6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-03-02 15:16:26 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96123
No description provided.