Fix T96123: Crash when click-dragging across the visibility icons

Partially revert aa71414dfca7f301e101cce3e72551e7529290ea

This attempted have the click-drag event compatible with old tweak
events, but needs to be re-thought since it caused events to be handled
in unexpected situations.